[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "easyAppLogic"
version = "0.1.0"
description = "Generic logic for easyScience applications"
license = "GPL-3.0-only"
authors = ["Andrew Sazonov", "Simon Ward"]
readme = "README.md"
homepage = "https://github.com/easyscience"
include = ["CHANGELOG.md"]
packages = [ { include = "easyAppLogic" } ]

[tool.poetry.dependencies]
python = "^3.7"
dicttoxml = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
