# POETRY CONFIG

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "easyAppLogic"
version = "0.0.1"
description = "Generic logic for easyScience applications"
license = "GPL-3.0-only"
authors = ["Andrew Sazonov", "Simon Ward"]
readme = "README.md"
homepage = "https://github.com/easyScience/easyAppLogic"
documentation = "https://github.com/easyScience/easyAppLogic"
include = ["CHANGELOG.md"]
packages = [ { include = "easyAppLogic" } ]

[tool.poetry.dependencies]
#python = '^3.7, <3.9'
python = "^3.10, <3.11"
#python = "^3.8, <3.9" # "^3.8" generates error when installing PySide2 in easyAppGui
dicttoxml = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# CUSTOM CONFIG
